android_build_errors_2_utf8.txt

> tauri
> tauri android build

node.exe :         Info 
Using installed NDK: C:\Use
rs\-Mobeen-\AppData\Local\A
ndroid\Sdk\ndk\30.0.1490419
8
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (     
       Info Us...k\30.0.   
 14904198:String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
        Info Looking up 
installed tauri packages 
to check mismatched 
versions...
     Running 
beforeBuildCommand `npm 
run build --prefix ui`

> ui@0.0.0 build
> vue-tsc -b && vite build

[36mvite v8.0.3 [32mbuilding client environment for production...[36m[39m
[2K
transforming...Γ£ô 2152 modules transformed.
rendering chunks...
computing gzip size...
dist/index.html                                      1.26 kB Γöé gzip:  0.53 kB
dist/assets/BaseSkeleton-CHQMjnPt.css                0.65 kB Γöé gzip:  0.34 kB
dist/assets/BaseToggle-Cdz3LVog.css                  0.98 kB Γöé gzip:  0.45 kB
dist/assets/CompletedView-euT5VFEO.css               1.54 kB Γöé gzip:  0.60 kB
dist/assets/QueuedView-BkVNgb0z.css                  2.77 kB Γöé gzip:  0.90 kB
dist/assets/SitesView-D2znPDx7.css                   3.45 kB Γöé gzip:  1.01 kB
dist/assets/CloudDriveView-C76vEXld.css              3.94 kB Γöé gzip:  1.19 kB
dist/assets/GrabberView-DYqbXpD4.css                 4.87 kB Γöé gzip:  1.35 kB
dist/assets/SettingsView-Cb7jOToL.css                5.75 kB Γöé gzip:  1.44 kB
dist/assets/StatsView-BFmiX3E-.css                   5.98 kB Γöé gzip:  1.53 kB
dist/assets/index-bo2w-oSO.css                      33.76 kB Γöé gzip:  6.68 kB
dist/assets/folder-CsiWvB6-.js                       0.23 kB Γöé gzip:  0.19 kB
dist/assets/stagger-DaLrx_bg.js                      0.29 kB Γöé gzip:  0.23 kB
dist/assets/ui.store-BGbnk8UF.js                     0.45 kB Γöé gzip:  0.32 kB
dist/assets/BaseSkeleton-C0s-PYt9.js                 0.54 kB Γöé gzip:  0.35 kB
dist/assets/cpu-CB45Aqzb.js                          0.65 kB Γöé gzip:  0.29 kB
dist/assets/BaseToggle-5oKDl6FU.js                   1.00 kB Γöé gzip:  0.60 kB
dist/assets/CompletedView-BgQGiZ8V.js                2.24 kB Γöé gzip:  1.17 kB
dist/assets/QueuedView-DBAT9aWk.js                   2.38 kB Γöé gzip:  1.19 kB
dist/assets/download.store-BylRVA3K.js               3.36 kB Γöé gzip:  1.36 kB
dist/assets/SitesView-BxLyti2x.js                    4.53 kB Γöé gzip:  1.86 kB
dist/assets/CloudDriveView-DZke9sbi.js               5.87 kB Γöé gzip:  2.67 kB
dist/assets/core-DSiR9wp0.js                         6.97 kB Γöé gzip:  3.21 kB
dist/assets/GrabberView-CgGAqr7t.js                  7.69 kB Γöé gzip:  3.32 kB
dist/assets/StatsView-CVl8mT5s.js                    9.15 kB Γöé gzip:  3.58 kB
dist/assets/SettingsView-DCLgh_Bw.js                10.08 kB Γöé gzip:  3.65 kB
dist/assets/runtime-dom.esm-bundler-foCxgSmi.js     14.79 kB Γöé gzip:  6.32 kB
dist/assets/animate-CRF_wRwq.js                     60.81 kB Γöé gzip: 21.34 kB
dist/assets/_plugin-vue_export-helper-Bo2lGr76.js   65.58 kB Γöé gzip: 25.78 kB
dist/assets/index-BjqMJcQ6.js                      147.89 kB Γöé gzip: 49.76 kB

[32mΓ£ô built in 552ms[39m
[1m[92m   Compiling[0m 
tauri v2.10.3
[1m[92m   Compiling[0m 
wry v0.54.4
[1m[92m   Compiling[0m 
tauri-plugin-log v2.8.0
[1m[92m   Compiling[0m 
tauri-plugin-store v2.4.2
[1m[92m   Compiling[0m 
mdownloader v0.2.0 (D:\Work
Station\IDM\src-tauri)
[1m[92m   Compiling[0m 
tauri-runtime-wry v2.10.1
[1m[91merror[E0433][0m[
1m[97m: failed to 
resolve: could not find 
`windows` in `net`[0m
   [1m[96m--> [0msrc\eng
ine\bridge.rs:7:17
    [1m[96m|[0m
[1m[96m  7[0m 
[1m[96m|[0m use tokio::n
et::windows::named_pipe::Se
rverOptions;
    [1m[96m|[0m         
        
[1m[91m^^^^^^^[0m 
[1m[91mcould not find 
`windows` in `net`[0m
    [1m[96m|[0m
[1m[92mnote[0m: found 
an item that was 
configured out
   [1m[96m--> [0mC:\User
s\-Mobeen-\.cargo\registry\
src\index.crates.io-1949cf8
c6b5b557f\tokio-1.50.0\src\
net\mod.rs:63:13
    [1m[96m|[0m
[1m[96m 63[0m 
[1m[96m|[0m     pub mod 
windows;
    [1m[96m|[0m         
    [1m[92m^^^^^^^[0m
    [1m[96m|[0m
   [1m[96m::: [0mC:\User
s\-Mobeen-\.cargo\registry\
src\index.crates.io-1949cf8
c6b5b557f\tokio-1.50.0\src\
macros\cfg.rs:375:26
    [1m[96m|[0m
[1m[96m375[0m 
[1m[96m|[0m             
#[cfg(all(any(all(doc, 
docsrs), windows), feature 
= "net"))]
    [1m[96m|[0m         
                 [1m[96m-
--------------------------
[0m [1m[96mthe item is 
gated here[0m

[1m[91merror[E0433][0m[
1m[97m: failed to 
resolve: could not find 
`windows` in `os`[0m
 [1m[96m--> [0msrc\engin
e\fast_io.rs:2:14
  [1m[96m|[0m
[1m[96m2[0m 
[1m[96m|[0m use std::os:
:windows::io::AsRawHandle;
  [1m[96m|[0m           
   [1m[91m^^^^^^^[0m 
[1m[91mcould not find 
`windows` in `os`[0m
  [1m[96m|[0m
[1m[92mnote[0m: found 
an item that was 
configured out
 [1m[96m--> [0m/rustc/e4
08947bfd200af42db322daf0fad
fe7e26d3bd1/library/std/src
/os/mod.rs:56:4
  [1m[96m|[0m
  [1m[96m= 
[0m[1m[97mnote[0m: the 
item is gated here
[1m[92mnote[0m: found 
an item that was 
configured out
 [1m[96m--> [0m/rustc/e4
08947bfd200af42db322daf0fad
fe7e26d3bd1/library/std/src
/os/mod.rs:120:9
  [1m[96m|[0m
  [1m[96m= 
[0m[1m[97mnote[0m: the 
item is gated here

[1m[91merror[E0433][0m[
1m[97m: failed to 
resolve: could not find 
`windows` in `os`[0m
 [1m[96m--> [0msrc\engin
e\sniffing\handle.rs:2:14
  [1m[96m|[0m
[1m[96m2[0m 
[1m[96m|[0m use std::os:
:windows::ffi::OsStrExt;
  [1m[96m|[0m           
   [1m[91m^^^^^^^[0m 
[1m[91mcould not find 
`windows` in `os`[0m
  [1m[96m|[0m
[1m[92mnote[0m: found 
an item that was 
configured out
 [1m[96m--> [0m/rustc/e4
08947bfd200af42db322daf0fad
fe7e26d3bd1/library/std/src
/os/mod.rs:56:4
  [1m[96m|[0m
  [1m[96m= 
[0m[1m[97mnote[0m: the 
item is gated here
[1m[92mnote[0m: found 
an item that was 
configured out
 [1m[96m--> [0m/rustc/e4
08947bfd200af42db322daf0fad
fe7e26d3bd1/library/std/src
/os/mod.rs:120:9
  [1m[96m|[0m
  [1m[96m= 
[0m[1m[97mnote[0m: the 
item is gated here

[1m[93mwarning[0m[1m[9
7m: unused import: 
`USER_AGENT`[0m
 [1m[96m--> [0msrc\engin
e\connection.rs:1:30
  [1m[96m|[0m
[1m[96m1[0m 
[1m[96m|[0m use 
reqwest::header::{RANGE, 
USER_AGENT, COOKIE, 
REFERER, IF_RANGE};
  [1m[96m|[0m           
                   
[1m[93m^^^^^^^^^^[0m
  [1m[96m|[0m
  [1m[96m= 
[0m[1m[97mnote[0m: 
`#[warn(unused_imports)]` 
(part of 
`#[warn(unused)]`) on by 
default

[1m[91merror[E0282][0m[
1m[97m: type annotations 
needed[0m
  [1m[96m--> [0msrc\engi
ne\bridge.rs:48:17
   [1m[96m|[0m
[1m[96m48[0m 
[1m[96m|[0m             
let server = match 
ServerOptions::new()
   [1m[96m|[0m          
       [1m[91m^^^^^^[0m
[1m[96m...[0m
[1m[96m65[0m 
[1m[96m|[0m             
if let Err(e) = 
server.connect().await {
   [1m[96m|[0m          
                   
[1m[96m------[0m 
[1m[96mtype must be 
known at this point[0m
   [1m[96m|[0m
[1m[96mhelp[0m: 
consider giving `server` 
an explicit type
   [1m[96m|[0m
[1m[96m48[0m [1m[96m| 
[0m            let 
server[92m: /* Type 
*/[0m = match 
ServerOptions::new()
   [1m[96m|[0m          
             
[92m++++++++++++[0m

[1m[91merror[E0599][0m[
1m[97m: no method named 
`encode_wide` found for 
reference `&OsStr` in the 
current scope[0m
  [1m[96m--> [0msrc\engi
ne\sniffing\handle.rs:31:14
   [1m[96m|[0m
[1m[96m30[0m 
[1m[96m|[0m           
let device_name: Vec<u16> 
= OsStr::new("\\\\.\\mdownl
oader_sniff")
   [1m[96m|[0m 
[1m[96m _________________
____________________-[0m
[1m[96m31[0m 
[1m[96m|[0m 
[1m[96m|[0m             
.encode_wide()
   [1m[96m|[0m 
[1m[96m|[0m             
[1m[96m-[0m[1m[91m^^^^
^^^^^^^[0m 
[1m[91mmethod not found 
in `&OsStr`[0m
   [1m[96m|[0m [1m[96m
|_____________|[0m
   [1m[96m|[0m

[1m[97mSome errors have 
detailed explanations: 
E0282, E0433, E0599.[0m
[1m[97mFor more 
information about an 
error, try `rustc 
--explain E0282`.[0m
[1m[93mwarning[0m: 
`mdownloader` (lib) 
generated 1 warning
[1m[91merror[0m: could 
not compile `mdownloader` 
(lib) due to 5 previous 
errors; 1 warning emitted
failed to build Android 
app: `Failed to run `cargo 
build`: command ["cargo", 
"build", "--package", 
"mdownloader", 
"--manifest-path", "D:\\Wor
kStation\\IDM\\src-tauri\\C
argo.toml", "--target", 
"aarch64-linux-android", 
"--features", 
"tauri/custom-protocol 
tauri/custom-protocol", 
"--lib", "--release"] 
exited with code 101
       Error failed to 
build Android app: `Failed 
to run `cargo build`: 
command ["cargo", "build", 
"--package", 
"mdownloader", 
"--manifest-path", "D:\\Wor
kStation\\IDM\\src-tauri\\C
argo.toml", "--target", 
"aarch64-linux-android", 
"--features", 
"tauri/custom-protocol 
tauri/custom-protocol", 
"--lib", "--release"] 
exited with code 101
